<resources>
    <string name="app_name">Next Idea</string>

    <!--db-->
    <string name="database_name">nextidea.db</string>

    <!--Menu-->
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="action_delete">Delete</string>


    <string name="formatter_item_last_edit">Last edit %s</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="accessibility_save_button">save button</string>
    <string name="category_dialog_title">Category</string>
    <string name="share_your_idea">Share your idea</string>
    <string name="no_ideas_thats_ok">No ideas? That\'s OK!</string>
    <string name="tap_the_icon_to_add_an_idea_and_it_will_show_up_here">Tap the + icon to add an idea and \nit will show up here</string>
    <string name="preferences">Preferences</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_delete_title">Are you sure you want to permanently delete this item?</string>
    <string name="alert_delete_title_button_yes">Yes</string>
    <string name="alert_delete_title_button_no">No</string>

</resources>
